# descartes

./: Cargo.toml  README.md
src/: angles.rs  arc_line_path.rs  area_embedding.rs  band.rs  bbox.rs  closed_line_path.rs  curved_path.rs  edit_arc_line_path.rs  embedding.rs  grid.rs  intersect.rs  lib.rs  line_path.rs  rough_eq.rs  segment_grid.rs  segments.rs  util.rs
src/areas/: debug.rs  mod.rs
src/areas/tests/: mod.rs
