[package]
name = "descartes"
version = "0.1.2"
description = "Imprecision-tolerant computational geometry for Rust"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/descartes"
license = "MIT"
maintenance = { status = "experimental" }

[dependencies]
nalgebra = "0.15.3"
ordered-float = "0.5.0"
itertools = "0.7.6"

[dependencies.compact]
version = "0.2.0"
optional = true

[dependencies.compact_macros]
version = "0.1.0"
optional = true

[dev-dependencies]
pretty_assertions = "0.4.1"

[features]
default = []
compact_containers = ["compact", "compact_macros"]
stdweb = ["nalgebra/stdweb"]
