[package]
name = "descartes"
version = "0.1.19"
description = "Imprecision-tolerant computational geometry for Rust"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/descartes"
license = "MIT"
[badges]
maintenance = { status = "experimental" }

[dependencies]
nalgebra = "0.16"
ordered-float = "0.5.0"
itertools = "0.7.6"
fnv = "1.0.6"
serde = {version = "1", optional = true}
serde_derive = {version = "1", optional = true}
stable-vec = "0.2.1"
smallvec = "0.6.5"

[dependencies.compact]
version = "0.2.9"
optional = true

[dependencies.compact_macros]
version = "0.1.0"
optional = true

[dev-dependencies]
pretty_assertions = "0.5.1"

[features]
default = []
compact_containers = ["compact", "compact_macros"]
stdweb = ["nalgebra/stdweb"]
serde-serialization = ["serde", "serde_derive", "nalgebra/serde-serialize"]